fix: update depositors fields

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -122,11 +122,11 @@
     "nervos_dao": {
       "nervos_dao": "NervosDAO",
       "total_deposit": "Total Deposit",
-      "deposit_transactions_count": "Deposit Transactions Count",
-      "withdraw_transactions_count": "Withdraw Transactions Count",
-      "depositor": "Depositor",
+      "deposit_transactions_count": "Deposit Transactions",
+      "withdraw_transactions_count": "Withdraw Transactions",
+      "current_depositors": "Current Depositors",
+      "total_depositors": "All Historical Depositors",
       "subsidy_granted": "Subsidy Granted",
-      "total_depositors": "Total Depositors",
       "dao_search_placeholder": "Transaction / Address",
       "dao_search_reset": "Reset",
       "dao_tab_transactions": "Transactions",
