chore: update subsidy to interest

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -69,7 +69,7 @@
       "lock_script": "Lock Script",
       "balance": "余额",
       "dao_deposit": "NervosDAO 存款金额",
-      "subsidy": "NervosDAO 利息",
+      "interest": "NervosDAO 利息",
       "pending_reward": "待发奖励",
       "code_hash": "Code Hash",
       "args": "Args",
@@ -129,7 +129,7 @@
       "withdraw_transactions_count": "提现交易",
       "current_depositors": "当前存款地址",
       "total_depositors": "所有历史存款地址",
-      "subsidy_granted": "利息",
+      "interest_granted": "利息",
       "dao_search_placeholder": "交易 / 地址",
       "dao_search_reset": "复位",
       "dao_tab_transactions": "交易列表",
