--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -20,7 +20,8 @@
       "charts": "图表",
       "docs": "文档",
       "search_placeholder": "区块 / 交易 / 地址 / 锁定脚本哈希",
-      "network": "测试网",
+      "network_mainnet": "主网",
+      "network_testnet": "测试网",
       "network_tooltip": "主网即将上线！"
     },
     "blockchain": {
