--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,7 +70,7 @@
       "lock_script": "Lock Script",
       "balance": "Balance",
       "dao_deposit": "NervosDAO Deposit",
-      "interest": "Interest Received",
+      "compensation": "NervosDAO Compensation",
       "pending_reward": "Pending Reward",
       "code_hash": "Code Hash",
       "args": "Args",
@@ -130,7 +130,9 @@
       "withdraw_transactions_count": "Withdraw Transactions",
       "current_depositors": "Current Depositors",
       "total_depositors": "All Historical Depositors",
-      "interest_granted": "Interest Granted",
+      "compensation": "Compensation",
+      "deposit_period": "Deposit Period",
+      "deposit_capacity": "Deposit Capacity",
       "dao_search_placeholder": "Transaction / Address",
       "dao_search_reset": "Reset",
       "dao_tab_transactions": "Transactions",
