--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -73,6 +73,8 @@
       "dao_deposit": "NervosDAO 存款金额",
       "compensation": "NervosDAO 锁定补贴",
       "pending_reward": "待发奖励",
+      "lock_until": "锁定到期",
+      "epoch": "Epoch",
       "code_hash": "Code Hash",
       "args": "Args",
       "hash_type": "Hash Type",
