feat: add cellDep/headerDep/witnesses to transaction page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,6 +87,14 @@
       "transaction": "Transaction",
       "transactions": "Transactions",
       "transaction_fee": "Transaction Fee",
+      "cell_deps": "CellDeps",
+      "out_point_tx_hash": "OutPoint.TxHash",
+      "out_point_index": "OutPoint.Index",
+      "dep_type": "DepType",
+      "header_deps": "HeaderDeps",
+      "header_dep": "HeaderDep",
+      "witnesses": "Witnesses",
+      "witness": "Witness",
       "status": "Status",
       "input": "Input",
       "output": "Output",
