--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -87,6 +87,14 @@
       "transaction": "交易",
       "transactions": "交易",
       "transaction_fee": "交易费",
+      "cell_deps": "CellDeps",
+      "out_point_tx_hash": "OutPoint.TxHash",
+      "out_point_index": "OutPoint.Index",
+      "dep_type": "DepType",
+      "header_deps": "HeaderDeps",
+      "header_dep": "HeaderDep",
+      "witnesses": "Witnesses",
+      "witness": "Witness",
       "status": "状态",
       "input": "输入",
       "output": "输出",
