--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -13,7 +13,7 @@
     "toast": {
       "invalid_content": "请输入有效内容",
       "invalid_network": "网络出错，请稍后再试",
-      "data_too_large": "数据过大，请在 PC 上查看",
+      "data_too_large": "数据过大，不支持下载",
       "result_not_found": "没有找到搜索结果"
     },
     "navbar": {
