chore: update dao message

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -137,11 +137,11 @@
     "nervos_dao": {
       "nervos_dao": "NervosDAO",
       "total_deposit": "Total Deposit",
-      "deposit_transactions_count": "Deposit Transactions",
-      "withdraw_transactions_count": "Withdraw Transactions",
+      "deposit_transactions_count": "Deposit Receipts",
+      "withdraw_transactions_count": "Withdraw Invoices",
       "current_depositors": "Current Depositors",
       "total_depositors": "All Historical Depositors",
-      "compensation": "Compensation",
+      "compensation": "Issued Compensation",
       "deposit_period": "Deposit Period",
       "deposit_capacity": "Deposit Capacity",
       "dao_search_placeholder": "Transaction / Address",
