--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -19,6 +19,8 @@
     "navbar": {
       "wallet": "钱包",
       "charts": "图表",
+      "nervos_dao": "NervosDAO",
+      "dao": "DAO",
       "docs": "文档",
       "search_placeholder": "区块 / 交易 / 地址 / 锁定脚本哈希",
       "network_mainnet": "主网",
