--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -139,10 +139,7 @@
     "nervos_dao": {
       "nervos_dao": "NervosDAO",
       "total_deposit": "Total Deposit",
-      "deposit_transactions_count": "Deposit Receipts",
-      "withdraw_transactions_count": "Withdraw Invoices",
-      "current_depositors": "Current Depositors",
-      "total_depositors": "All Historical Depositors",
+      "current_depositors": "Deposit Addresses",
       "compensation": "Issued Compensation",
       "deposit_period": "Deposit Period",
       "deposit_capacity": "Deposit Capacity",
