--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -139,12 +139,9 @@
     },
     "nervos_dao": {
       "nervos_dao": "NervosDAO",
-      "total_deposit": "当前存款总额",
-      "deposit_transactions_count": "待补贴存单",
-      "withdraw_transactions_count": "已补贴存单",
-      "current_depositors": "当前存款地址",
-      "total_depositors": "所有历史存款地址",
-      "compensation": "已发放补贴",
+      "total_deposit": "当前锁定总额",
+      "current_depositors": "锁定地址总数",
+      "compensation": "累计发放补贴",
       "deposit_period": "存款周期",
       "deposit_capacity": "存款金额",
       "dao_search_placeholder": "交易 / 地址",
