chore: update home statistic message

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,9 +30,9 @@
       "best_block_tooltip": "The latest block of the best chain",
       "difficulty_tooltip": "Difficulty of the latest epoch",
       "hash_rate": "Hash Rate",
-      "hash_rate_tooltip": "Average Hash Rate of the last 500 blocks",
+      "hash_rate_tooltip": "Average Hash Rate of the last 100 blocks",
       "average_block_time": "Average Block Time",
-      "average_block_time_tooltip": "Average Block Time of the latest epoch",
+      "average_block_time_tooltip": "Average Block Time of the last 100 blocks",
       "nervos_dao": "Nervos DAO",
       "mainnet": "Lina Mainnet",
       "testnet": "Testnet"
