chore: update home and block list address width

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
       "overview": "Overview",
       "view_all": "View All",
       "minute": "minutes",
-      "second_ago": "second ago",
+      "second_ago": "sec ago",
       "ckb_unit": "CKB"
     },
     "toast": {
