--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -74,6 +74,7 @@
       "compensation": "Nervos DAO 锁定补贴",
       "pending_reward": "待发奖励",
       "lock_until": "锁定到期",
+      "estimated": "估计",
       "epoch": "Epoch",
       "code_hash": "Code Hash",
       "args": "Args",
