--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -64,8 +64,10 @@
     "search": {
       "loading": "加载中...",
       "empty_result": "哎呀！搜索失败，请尝试不同的关键字〜",
-      "address_type_error": "检测到测试链地址，请跳转",
-      "address_type_url": "测试链浏览器查询"
+      "address_type_testnet_error": "检测到测试链地址，请跳转",
+      "address_type_mainnet_error": "检测到主网地址，请跳转",
+      "address_type_testnet_url": "测试链浏览器查询",
+      "address_type_mainnet_url": "主网浏览器查询"
     },
     "address": {
       "address": "地址",
