--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -135,6 +135,7 @@
       "hash_rate_hps": "哈希率(H/s)",
       "hash_rate": "哈希率",
       "uncle_rate": "叔块率",
+      "uncle_rate_target": "叔块率目标值",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
       "pending": "待发放",
