feat: impl transaction count chart

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,10 @@
       "mainnet": "Lina Mainnet",
       "testnet": "Testnet"
     },
+    "statistic": {
+      "transaction_count": "Transaction Count",
+      "date": "Date"
+    },
     "home": {
       "height": "Height",
       "transactions": "Transactions",
