feat: impl total dao deposit chart

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,6 +40,7 @@
     "statistic": {
       "transaction_count": "Transaction Count",
       "address_count": "Address Count",
+      "total_dao_deposit": "Total Nervos DAO Deposit",
       "date": "Date"
     },
     "home": {
