--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -41,6 +41,8 @@
       "transaction_count": "交易数量",
       "address_count": "地址数量",
       "total_dao_deposit": "Nervos DAO 锁定总额",
+      "live_cell": "未花费 Cell",
+      "dead_cell": "已花费 Cell",
       "date": "时间"
     },
     "home": {
