--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,6 +43,7 @@
       "total_dao_deposit": "Total Nervos DAO Deposit",
       "live_cell": "Live Cell",
       "dead_cell": "Dead Cell",
+      "cell_count": "Cell Count",
       "date": "Date"
     },
     "home": {
