--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -44,6 +44,10 @@
       "live_cell": "未花费 Cell",
       "dead_cell": "已花费 Cell",
       "cell_count": "Cell 数量",
+      "balance_ranking": "账户余额排名",
+      "ranking": "排名",
+      "balance": "余额",
+      "address": "地址",
       "date": "时间"
     },
     "home": {
