--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -42,7 +42,7 @@
       "address_count": "地址数量",
       "total_dao_deposit": "Nervos DAO 锁定总额",
       "live_cell": "未花费 Cell",
-      "dead_cell": "已花费 Cell",
+      "archived_cell": "已花费 Cell",
       "cell_count": "Cell 数量",
       "balance_ranking": "账户余额排名",
       "ranking": "排名",
