chore: add log to balance ranking axis

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,7 +48,8 @@
       "ranking": "Ranking",
       "balance": "Balance",
       "address": "Address",
-      "date": "Date"
+      "date": "Date",
+      "log": "(Log)"
     },
     "home": {
       "height": "Height",
