chore: update log message

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -49,7 +49,7 @@
       "balance": "余额",
       "address": "地址",
       "date": "时间",
-      "log": "（对数坐标）"
+      "log": "（对数）"
     },
     "home": {
       "height": "高度",
