--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -139,7 +139,7 @@
       "epoch_start_number": "Epoch Start Number",
       "block_number": "Block Number",
       "epoch_number": "Epoch Number",
-      "epoch_length": "Epoch Length",
+      "block_index": "Block Index",
       "nonce": "Nonce",
       "proof": "PoW Proof",
       "timestamp": "Timestamp",
