feat: add live cells for address page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,6 +87,7 @@
       "lock_hash": "Lock Hash",
       "lock_script": "Lock Script",
       "balance": "Balance",
+      "live_cells": "Live Cells",
       "dao_deposit": "Nervos DAO Deposit",
       "compensation": "Nervos DAO Compensation",
       "pending_reward": "Pending Reward",
