--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -87,6 +87,7 @@
       "lock_hash": "Lock Hash",
       "lock_script": "Lock Script",
       "balance": "余额",
+      "live_cells": "未花费 Cells",
       "dao_deposit": "Nervos DAO 存款金额",
       "compensation": "Nervos DAO 锁定补贴",
       "pending_reward": "待发奖励",
