--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,7 +174,13 @@
       "dao_tab_depositors": "Depositors",
       "dao_title_rank": "Rank",
       "dao_title_address": "Address",
-      "dao_title_deposit_capacity": "Deposit Capacity"
+      "dao_title_deposit_capacity": "Deposit Capacity",
+      "deposit": "Deposit",
+      "addresses": "Addresses",
+      "unclaimed_compensation": "Unclaimed Comp",
+      "claimed_compensation": "Claimed Comp",
+      "average_deposit_time": "Average Deposit Time",
+      "estimated_apc": "Estimated APC"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
