--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -175,7 +175,13 @@
       "dao_tab_depositors": "存款地址",
       "dao_title_rank": "排名",
       "dao_title_address": "地址",
-      "dao_title_deposit_capacity": "提现金额"
+      "dao_title_deposit_capacity": "提现金额",
+      "deposit": "锁定总额",
+      "addresses": "地址数量",
+      "unclaimed_compensation": "未解锁补贴",
+      "claimed_compensation": "已解锁补贴",
+      "average_deposit_time": "平均锁定时间",
+      "estimated_apc": "预估 APC"
     },
     "error": {
       "maintain": "网络维护中，请稍后再试"
