--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -180,7 +180,11 @@
       "unclaimed_compensation": "Unclaimed Comp",
       "claimed_compensation": "Claimed Comp",
       "average_deposit_time": "Average Deposit Time",
-      "estimated_apc": "Estimated APC"
+      "estimated_apc": "Estimated APC",
+      "secondary_issuance": "Secondary Issuance",
+      "mining_reward": "Mining Reward",
+      "deposit_compensation": "Deposit Compensation",
+      "treasury": "Treasury(burn by now)"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
