--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -184,7 +184,10 @@
       "secondary_issuance": "Secondary Issuance",
       "mining_reward": "Mining Reward",
       "deposit_compensation": "Deposit Compensation",
-      "treasury": "Treasury(burn by now)"
+      "treasury": "Treasury(burn by now)",
+      "deposit_tooltip": "Nervos DAO Deposit",
+      "withdraw_tooltip": "Nervos DAO Withdraw",
+      "calculation_tooltip": "Nervos DAO Compensation Calculation"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
