--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -177,8 +177,8 @@
       "dao_title_deposit_capacity": "Deposit Capacity",
       "deposit": "Deposit",
       "addresses": "Addresses",
-      "unclaimed_compensation": "Unclaimed Comp",
-      "claimed_compensation": "Claimed Comp",
+      "unclaimed_compensation": "Unclaimed Compensation",
+      "claimed_compensation": "Claimed Compensation",
       "average_deposit_time": "Average Deposit Time",
       "estimated_apc": "Estimated APC",
       "secondary_issuance": "Secondary Issuance",
@@ -187,7 +187,10 @@
       "treasury": "Treasury(burn by now)",
       "deposit_tooltip": "Nervos DAO Deposit",
       "withdraw_tooltip": "Nervos DAO Withdraw",
-      "calculation_tooltip": "Nervos DAO Compensation Calculation"
+      "calculation_tooltip": "Nervos DAO Compensation Calculation",
+      "days": "days+",
+      "24hrs_update": "24 Hours Update(UTC+8:00)",
+      "today_update": "Today Update(UTC+8:00)"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
