--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -189,8 +189,8 @@
       "withdraw_tooltip": "Nervos DAO Withdraw",
       "calculation_tooltip": "Nervos DAO Compensation Calculation",
       "days": "days+",
-      "24hrs_update": "24 Hours Update(UTC+8:00)",
-      "today_update": "Today Update(UTC+8:00)"
+      "24hrs_update": "24 Hours Changes(UTC+8:00)",
+      "today_update": "Today Changes(UTC+8:00)"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
