--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -130,10 +130,13 @@
       "commit_reward": "Commit Reward",
       "proposal_reward": "Proposal Reward",
       "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our Consensus Protocol",
-      "capacity": "Capacity",
+      "capacity": "Capacity(CKB)",
       "detail": "Detail",
       "empty_output": "No cell output target",
-      "unspent_output": "Unspent Transaction Output"
+      "unspent_output": "Unspent Transaction Output",
+      "transaction_hash": "Transaction Hash",
+      "height": "Height",
+      "time": "Time"
     },
     "block": {
       "block": "Block",
