feat: add header and footer to latest blocks table

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -60,7 +60,8 @@
       "more": "More",
       "miner": "Miner",
       "reward": "Reward",
-      "cells": "Cells"
+      "cells": "Cells",
+      "latest_blocks": "Latest Blocks"
     },
     "footer": {
       "nervos_foundation": "Foundation",
