--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -6,7 +6,7 @@
       "detail": "详情",
       "overview": "概况",
       "view_all": "查看全部",
-      "minute": "分钟",
+      "minute": "分",
       "second_ago": "秒以前",
       "ckb_unit": "CKB"
     },
