--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -140,6 +140,7 @@
       "block_height": "高度",
       "proposal_transactions": "提案交易",
       "block_reward": "区块奖励",
+      "miner_reward": "矿工奖励",
       "uncle_count": "叔块数",
       "epoch": "Epoch",
       "epoch_start_number": "Epoch 开始区块",
@@ -158,9 +159,8 @@
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
       "pending": "待发放",
-      "calculating": "待计算",
       "pending_tip": "区块奖励将在 11 个区块后发送给矿工，阅读共识协议了解更多信息",
-      "calculating_tip": "交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息"
+      "reward_sent_tip": "区块奖励已经发送成功，请点击查看详情"
     },
     "nervos_dao": {
       "nervos_dao": "Nervos DAO",
