--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -194,7 +194,7 @@
       "deposit_compensation": "Deposit Compensation",
       "burnt": "Burnt",
       "deposit_tooltip": "Nervos DAO Deposit",
-      "withdraw_tooltip": "Nervos DAO Withdraw",
+      "withdraw_tooltip": "Nervos DAO Withdraw Request",
       "calculation_tooltip": "Nervos DAO Compensation Calculation",
       "days": "days+",
       "24hrs_update": "24 Hours Changes(UTC+8:00)",
