--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -175,15 +175,15 @@
       "total_deposit": "当前锁定总额",
       "current_depositors": "锁定地址总数",
       "compensation": "累计发放补贴",
-      "deposit_period": "存款周期",
-      "deposit_capacity": "存款金额",
+      "deposit_period": "锁定周期",
+      "deposit_capacity": "锁定金额",
       "dao_search_placeholder": "交易 / 地址",
       "dao_search_reset": "复位",
       "dao_tab_transactions": "交易列表",
       "dao_tab_depositors": "存款地址",
       "dao_title_rank": "排名",
       "dao_title_address": "地址",
-      "dao_title_deposit_capacity": "提现金额",
+      "dao_title_deposit_capacity": "锁定金额",
       "deposit": "锁定总额",
       "addresses": "地址数量",
       "unclaimed_compensation": "未领取补贴",
