--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -98,7 +98,7 @@
       "balance": "余额",
       "live_cells": "未花费 Cells",
       "block_mined": "已挖区块",
-      "dao_deposit": "Nervos DAO 存款金额",
+      "dao_deposit": "Nervos DAO 锁定金额",
       "compensation": "Nervos DAO 锁定补贴",
       "pending_reward": "待发奖励",
       "lock_until": "锁定到期",
@@ -180,7 +180,7 @@
       "dao_search_placeholder": "交易 / 地址",
       "dao_search_reset": "复位",
       "dao_tab_transactions": "交易列表",
-      "dao_tab_depositors": "存款地址",
+      "dao_tab_depositors": "锁定地址",
       "dao_title_rank": "排名",
       "dao_title_address": "地址",
       "dao_title_deposit_capacity": "锁定金额",
