chore: update secondary issuance

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -190,7 +190,7 @@
       "claimed_compensation": "已领取补贴",
       "average_deposit_time": "平均锁定时间",
       "estimated_apc": "预估 APC",
-      "secondary_issuance": "二级增发",
+      "secondary_issuance": "二级发行",
       "mining_reward": "挖矿奖励",
       "deposit_compensation": "锁定补贴",
       "burnt": "已销毁",
