--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,7 @@
       "total_dao_deposit": "Total Nervos DAO Deposit",
       "live_cell": "Live Cell",
       "archived_cell": "Archived Cell",
+      "all_cells": "All Cells",
       "cell_count": "Cell Count",
       "balance_ranking": "Balance Ranking",
       "ranking": "Ranking",
