--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -44,6 +44,7 @@
       "total_dao_deposit": "Nervos DAO 锁定总额",
       "live_cell": "未花费 Cell",
       "archived_cell": "已花费 Cell",
+      "all_cells": "所有的 Cell",
       "cell_count": "Cell 数量",
       "balance_ranking": "账户余额排名",
       "ranking": "排名",
