--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -52,7 +52,7 @@
       "ranking": "排名",
       "balance": "余额",
       "address": "地址",
-      "date": "时间",
+      "date": "日期",
       "log": "（对数坐标）"
     },
     "home": {
