feat: add compensation time and lock period and time

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -173,7 +173,10 @@
       "total_deposit": "Total Deposit",
       "current_depositors": "Deposit Addresses",
       "compensation": "Issued Compensation",
-      "deposit_period": "Deposit Period",
+      "compensation_period": "Compensation Period",
+      "compensation_time": "Compensation Time",
+      "locked_period": "Locked Period",
+      "locked_time": "Locked Time",
       "deposit_capacity": "Deposit Capacity",
       "dao_search_placeholder": "Transaction / Address",
       "dao_search_reset": "Reset",
