--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -173,8 +173,11 @@
       "nervos_dao": "Nervos DAO",
       "total_deposit": "当前锁定总额",
       "current_depositors": "锁定地址总数",
-      "compensation": "累计发放补贴",
-      "deposit_period": "锁定周期",
+      "compensation": "已发放补偿",
+      "compensation_period": "补偿周期",
+      "compensation_time": "补偿时间",
+      "locked_period": "锁定周期",
+      "locked_time": "锁定时间",
       "deposit_capacity": "锁定金额",
       "dao_search_placeholder": "交易 / 地址",
       "dao_search_reset": "复位",
