--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -174,6 +174,7 @@
       "total_deposit": "当前锁定总额",
       "current_depositors": "锁定地址总数",
       "compensation": "已发放补偿",
+      "unissued_compensation": "待发放补偿",
       "compensation_period": "补偿周期",
       "compensation_time": "补偿时间",
       "locked_period": "锁定周期",
