feat: impl transaction parameters hiding

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -140,7 +140,8 @@
       "unspent_output": "Unspent Transaction Output",
       "transaction_hash": "Transaction Hash",
       "height": "Height",
-      "time": "Time"
+      "time": "Time",
+      "transaction_parameters": "Transaction Parameters"
     },
     "block": {
       "block": "Block",
