--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -140,7 +140,8 @@
       "unspent_output": "未花费的交易输出",
       "transaction_hash": "交易哈希",
       "height": "区块高度",
-      "time": "时间戳"
+      "time": "时间戳",
+      "transaction_parameters": "更多交易参数"
     },
     "block": {
       "block": "区块",
