--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,7 +23,9 @@
       "docs": "Docs",
       "search_placeholder": "Block / Transaction / Address / Lock Hash",
       "mainnet": "LINA",
-      "testnet": "TESTNET"
+      "testnet": "TESTNET",
+      "language_en": "EN",
+      "language_zh": "简体中文"
     },
     "blockchain": {
       "latest_block": "Latest Block",
