--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,8 @@
       "mainnet": "LINA",
       "testnet": "TESTNET",
       "language_en": "EN",
-      "language_zh": "简体中文"
+      "language_zh": "简体中文",
+      "explorer": "Explorer"
     },
     "blockchain": {
       "latest_block": "Latest Block",
