--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -25,7 +25,8 @@
       "mainnet": "LINA",
       "testnet": "测试网",
       "language_en": "EN",
-      "language_zh": "简体中文"
+      "language_zh": "简体中文",
+      "explorer": "浏览器"
     },
     "blockchain": {
       "latest_block": "最高块",
