--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,7 +26,20 @@
       "testnet": "TESTNET",
       "language_en": "EN",
       "language_zh": "简体中文",
-      "explorer": "Explorer"
+      "explorer": "Explorer",
+      "wallets": "Wallets",
+      "wallet_abc": "ABC Wallet",
+      "wallet_abc_description": "A safe, user-friendly decentralized cross-platform wallet",
+      "wallet_bitpie": "Bitpie",
+      "wallet_bitpie_description": "Bitpie is an industry-leading multi-blockchain (BTC/ETH/EOS/USDT etc.) wallet",
+      "wallet_cobo": "Cobo Wallet",
+      "wallet_cobo_description": "Grow and protect crypto assets for everyone",
+      "wallet_hoo": "Hoo Wallet",
+      "wallet_hoo_description": "A multi-assets blockchain wallet connected with Hoo exchange",
+      "wallet_imtoken": "imToken",
+      "wallet_imtoken_description": "imToken is a feature-rich digital wallet to securely manage BTC, ETH, ATOM, EOS, TRX, CKB, BCH, LTC, and other digital assets",
+      "wallet_neuron": "Neuron",
+      "wallet_neuron_description": "An open source project from Nervos Foundation, with local CKB node to achieve trustless services"
     },
     "blockchain": {
       "latest_block": "Latest Block",
