feat: impl header wallets for pc

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,7 +39,8 @@
       "wallet_imtoken": "imToken",
       "wallet_imtoken_description": "imToken is a feature-rich digital wallet to securely manage BTC, ETH, ATOM, EOS, TRX, CKB, BCH, LTC, and other digital assets",
       "wallet_neuron": "Neuron",
-      "wallet_neuron_description": "An open source project from Nervos Foundation, with local CKB node to achieve trustless services"
+      "wallet_neuron_description": "An open source project from Nervos Foundation, with local CKB node to achieve trustless services",
+      "wallets_memo": "In alphabetical order"
     },
     "blockchain": {
       "latest_block": "Latest Block",
